<resources>
    <string name="app_name">Hops</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="tutorial_1">다양한 스티커와 테마 디자인으로\n센스잇는 채팅을</string>
    <string name="tutorial_2">HOPS친구들과 함께 음성통화,영상통화를 마음껏</string>
    <string name="tutorial_3">다양한 표현이 가능한 스티커와 테마 기능</string>
    <string name="tutorial_4">그룹으로 나누는 우리만의 이야기</string>
    <string name="tutorial_5">모바일과 pc를 연동으로 더욱 편리한 채팅을</string>
    <string name="makecard_str1_2">Hops is leading the right not to be connected.\nWe prevent excessive linking of social media from phone number exposures by assigning virtual numbers.</string>
    <string name="makecard_str2_2">Please enter your organization and your position.</string>
    <string name="makecard_str2_3">Please upload a picture that represents you.</string>
    <string name="makecard_str3_2">Please enter the social media, blog and webpage link you want to share on your first meeting.
If you do not want anything, go to the next.</string>
    <string name="makecard_str4_2">What is your sense of value?\n
You can think of many things, but please express it concisely in one sentence.</string>
    <string name="makecard_title1">기본정보</string>
    <string name="makecard_title2">소속</string>
    <string name="makecard_title3">연결성</string>
    <string name="makecard_title4">가치세우기</string>
    <string name="makecard_name1">이름</string>
    <string name="makecard_email1">이메일</string>
    <string name="makecard_phonenumber1">전화번호</string>
    <string name="makecard_selectvirtualnumber1">가상번호</string>
    <string name="makecard_company">소속</string>
    <string name="makecard_position">위치</string>
    <string name="makecard_next">다음</string>
    <string name="makecard_finish">나의 Hops 보러가기</string>
    <string name="makecard_description">가치관</string>
    <string name="makecard_str1">Hops는 연결되지 않을 권리를 선도합니다.\n연락처만으로도 과도하게 노출되는 SNS를 가상번호를 부여함으로써 방지하고 있습니다.</string>
    <string name="makecard_str2">소속은 일반적으로 내가 속해있는 곳과 직책을 입력합니다. 상황에 따라 자신의 가치를 스스로 세워 소속을 만들어보는 것도 제안드립니다.</string>
    <string name="makecard_str3">소속의 로고나 나를 대표하는 사진을 업로드 해주세요.</string>
    <string name="makecard_str4">Hops는 연결되지 않을 권리를 선도합니다. 첫 만남에서 공유하고 싶은 SNS, 블로그, 웹페이지 링크를 직접 입력해주세요. 어느 것도 원하지 않는다면 다음을 눌러주새요.</string>
    <string name="makecard_str5">나의 가치관은 무엇일까요? 여러가지가 떠오르겠지만 한문장으로 간결하게 표현해주세요. 오로지 나만의 색채가 담긴 단 한문장:)</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."
    </string>
    <!-- Firebase Auth -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_successed">Successed to Authenticate</string>

    <string name="dbname_user_account_settings">Users_account_settings</string>
    <string name="dbname_users">Users</string>

    <string name="kakao_app_key">f7a01ecf6d8d4d0aed7e489c0a48f</string>
    <string name="kakao_scheme">kakaof7a01ecf6d8d4d0aed7e489c0a48f</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="button">Button</string>

    <string name="lorem_ipsum">dasdasd</string>
</resources>
