<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titletext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/makecard_title1"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="30dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/makecard_name1"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/makecard_email1"
                android:id="@+id/input_email"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/makecard_phonenumber1"
                android:id="@+id/input_pnumber"/>
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">
            <Switch
                android:id="@+id/switch1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/makecard_selectvirtualnumber1"
                android:textSize="20dp"/>
            <TextView
                android:layout_marginTop="58dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/makecard_str1"
                android:textSize="15dp"/>
            <Button
                android:id="@+id/btnNext"
                android:onClick="onClick"
                android:layout_marginTop="138dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/makecard_next"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>