<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titletext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/makecard_title4"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="30dp"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/makecard_str5"
            android:textSize="17dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <EditText
                android:id="@+id/inputdescription"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#efefef"
                android:inputType="textMultiLine"
                android:hint="@string/makecard_description"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnNext"
            android:onClick="onClick"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/makecard_finish"/>
    </LinearLayout>
</ScrollView>