<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/titletext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/makecard_title2"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="30dp"/>
        <TextView
            android:id="@+id/test"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/makecard_str2"
            android:textSize="17dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/makecard_company"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <EditText
                android:id="@+id/input_postion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/makecard_position"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:background="#efefef">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/input_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@drawable/round_view"
                    android:src="@drawable/profile"
                    android:onClick="onClick"/>
                <TextView
                    android:layout_marginTop="55dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/makecard_str3"
                    android:textSize="16dp"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnNext"
                android:onClick="onClick"
                android:layout_marginTop="160dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/makecard_next"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>